// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote renders correctly 1`] = `
<DocumentFragment>
  <blockquote
    class="u-blockquote"
    data-name="blockquote"
  >
    <div
      class="u-blockquote__body"
    >
      lorem ipsum dolor
    </div>
    <footer
      class="u-blockquote__footer"
    >
      ~ Greg
    </footer>
  </blockquote>
</DocumentFragment>
`;

exports[`Blockquote renders correctly without a footer 1`] = `
<DocumentFragment>
  <blockquote
    class="u-blockquote"
    data-name="blockquote"
  >
    <div
      class="u-blockquote__body"
    >
      lorem ipsum dolor
    </div>
  </blockquote>
</DocumentFragment>
`;
